k8s/ingresses/ats-ingress-2.yaml
#  Licensed to the Apache Software Foundation (ASF) under one
#  or more contributor license agreements.  See the NOTICE file
#  distributed with this work for additional information
#  regarding copyright ownership.  The ASF licenses this file
#  to you under the Apache License, Version 2.0 (the
#  "License"); you may not use this file except in compliance
#  with the License.  You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

apiVersion: v1
kind: Namespace
metadata:
  name: trafficserver-test-3

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-ingress
  namespace: trafficserver-test-3
  annotations:
    ats.ingress.kubernetes.io/server-snippet: |
      ts.debug('Debug msg example')
      ts.error('Error msg example')
spec:
  rules:
  - host: test.edge.com
    http:
      paths:
      - path: /app2
        backend:
          serviceName: appsvc2
          servicePort: 8080
